[project]
name = "rippie"
version = "0.1.0"
description = "A Discord bot that turns any music link into every music link. Built by dreamers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-cord>=2.8.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.15",
]
